--- a/control/creds/output_file.tf.tmpl
+++ b/control/creds/output_file.tf.tmpl
@@ -5,7 +5,7 @@ resource "local_file" "creds" {
 	client_id		= "${azuread_application.control.application_id}"
 	client_secret		= "${azuread_application_password.control.value}"
 EOT
- filename = "terraform.tfvars.tmpl"
+ filename = "terraform.cred"
 }
 
 
